# greenlightalert

./: .gitignore  CMakeLists.txt  README.md  fix_ei_library.sh  main.cpp  serial_saver.cpp  serial_viewer.cpp
app/: README.md  gradle.properties  local.properties  settings.gradle.kts
app/composeApp/: build.gradle.kts
app/composeApp/src/androidMain/: AndroidManifest.xml
app/composeApp/src/androidMain/kotlin/com/greenlightalert/trafficcam/: AndroidAlertPlayer.kt  AndroidImageDecoding.kt  AndroidRuntime.kt  MainActivity.kt  PermissionAwareTrafficCamApp.kt
app/composeApp/src/androidMain/kotlin/com/greenlightalert/trafficcam/ble/: AndroidBleClient.kt
app/composeApp/src/androidMain/kotlin/com/greenlightalert/trafficcam/history/: AndroidHistoryStore.kt
app/composeApp/src/androidMain/res/values/: strings.xml
app/composeApp/src/commonMain/kotlin/com/greenlightalert/trafficcam/: AlertPlayer.kt  AppModels.kt  AppPresenter.kt  ImageDecoding.kt  Runtime.kt
app/composeApp/src/commonMain/kotlin/com/greenlightalert/trafficcam/ble/: BleClient.kt  BleModels.kt  BleProtocol.kt
app/composeApp/src/commonMain/kotlin/com/greenlightalert/trafficcam/history/: HistoryStore.kt
app/composeApp/src/commonMain/kotlin/com/greenlightalert/trafficcam/ui/: App.kt
app/composeApp/src/iosMain/kotlin/com/greenlightalert/trafficcam/: IosAlertPlayer.kt  IosImageDecoding.kt  IosRuntime.kt  MainViewController.kt
app/composeApp/src/iosMain/kotlin/com/greenlightalert/trafficcam/ble/: IosBleClient.kt
app/composeApp/src/iosMain/kotlin/com/greenlightalert/trafficcam/history/: IosHistoryStore.kt
app/gradle/: libs.versions.toml
arduino/esp32_serial_camera_sender/: README.md  camera_pins.h  config.h  esp32_serial_camera_sender.ino  red_light_box_shared.cpp  red_light_box_shared.h  shared_detection_config.h  traffic_light_detector_shared.cpp  traffic_light_detector_shared.h
ei_bbox_dataset/training/: bounding_boxes.labels
openai_annotations/: periodic_frame_50_1773964397201.openai_boxes.json
scripts/: annotate_trafficimages.py  build_ei_bbox_dataset.py  delete_orphan_traffic_texts.py  openai_annotate_traffic_lights.py  sample_coco_dataset.py
tests/end_to_end/: Arduino.h  README.md  end_to_end.cpp  run.sh
tests/find_light/: test_find_light.cpp
tests/red_light_box_center/: README.md  red_light_box_center.cpp  run.sh
